--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -42,7 +42,7 @@
     <script src="app/busqueda/busqueda.controller.js"></script>
 
     <!-- Noticias -->
-    <script src="app/noticias/noticias.controller.js"></script>
+    <script src="app/principal/noticias.controller.js"></script>
 
     <!-- Administration -->
     <script src="app/administracion/administracion.js"></script>
