--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -1,9 +1,13 @@
 ﻿<!DOCTYPE html>
 <html ng-app="WebLegemApp" ng-controller="homeController as vm">
 <head>
-    <title>Legem</title>
+    <title>Web Legem</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!--    <script src="scripts/onepagescroll.js"></script>
+    <link href="scripts/onepage-scroll.css" rel="stylesheet" />-->
+
 
     <!-- Library Styles -->
     <link href="../bower_components/animate.css/animate.min.css" rel="stylesheet" />
@@ -140,104 +144,109 @@
     <script src="common/directives/noticias/wlegem-news.directive.js"></script>
     <script src="common/directives/mini-footer/wlegem-mini-footer.directive.js"></script>
     <link href="css/normalize.css" rel="stylesheet" />
+    <link href="css/animacion_carga.css" rel="stylesheet" />
 </head>
 
-<body id="body_index">
-    <div style=" width:100%; min-height:100vh;">
+<body id="body_index" >
+    <div class="main">
+        <section>
+            <div style=" width:100%; min-height:100vh;">
 
-        <div class="header">
-            <div class="figura_logo" ng-show="vm.$state.current.name == 'home'">
-                <svg viewBox="0 0 1000 1000" preserveAspectRatio="none" width="100%" height="100%">
-                    <defs>
-                        <defs>
-                            <radialGradient id="rgrad" cx="50%" cy="50%" r="75%">
-                                <stop offset="0%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
-                                <stop offset="16%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:rgb(7,48,33);stop-opacity:1" />
-                            </radialGradient>
-                        </defs>
-                    </defs>
-                    <polygon id="svg_image" points="0,0 1000,0 1000,500 500,1000 0,500" fill="url(#rgrad)"></polygon>
-                </svg>
-                <div class="contenedor_nombre_escudo">
-                    <img class="escudo_pagina" src="recursos/header/udenar_bl.png" />
+                <div class="header">
+                    <div class="figura_logo" ng-show="vm.$state.current.name == 'home'">
+                        <svg viewBox="0 0 1000 1000" preserveAspectRatio="none" width="100%" height="100%">
+                            <defs>
+                                <defs>
+                                    <radialGradient id="rgrad" cx="50%" cy="50%" r="75%">
+                                        <stop offset="0%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
+                                        <stop offset="16%" style="stop-color:rgb(0,133,99);stop-opacity:1" />
+                                        <stop offset="100%" style="stop-color:rgb(7,48,33);stop-opacity:1" />
+                                    </radialGradient>
+                                </defs>
+                            </defs>
+                            <polygon id="svg_image" points="0,0 1000,0 1000,500 500,1000 0,500" fill="url(#rgrad)"></polygon>
+                        </svg>
+                        <div class="contenedor_nombre_escudo">
+                            <img class="escudo_pagina" src="recursos/header/udenar_bl.png" />
+                        </div>
+                    </div>
+                    <div style="position:absolute; left:0; display:flex;"
+                         ng-show="vm.$state.current.name != 'home' || (!vm.loggeado && vm.$state.current.name == 'busqueda')">
+                        <img src="recursos/escudos-logos/planeacion.png" style="height:65px;margin-top:-5px;" />
+                        <p style="font-family:'AbrilFatface-Regular'; color:white; font-size:40px; line-height:1.2;">Legem</p>
+                    </div>
+                    <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
+                        <div class="deslizador">
+                            <button class="btn_deslizable" onclick="document.getElementById('body_index').scrollTop = getPosition().y;">
+                                <span class="ico-newspaper-o"></span>
+                                <p>Actualidad</p>
+                            </button>
+
+                            <button class="btn_deslizable" ui-sref="busqueda">
+                                <span class="ico-search"></span>
+                                <p>Busqueda</p>
+                            </button>
+
+                            <button class="btn_deslizable" ui-sref="home" onclick="document.getElementById('body_index').scrollTop = '0';">
+                                <span class="ico-home"></span>
+                                <p>Inicio</p>
+                            </button>
+
+                            <button class="btn_deslizable" ui-sref="login" ng-show="!vm.loggeado">
+                                <span class="ico-sign-in"></span>
+                                <p>Ingresar</p>
+                            </button>
+
+                            <button class="btn_deslizable" ng-click="vm.LogOut()" ng-show="vm.loggeado">
+                                <span class="ico-sign-in"></span>
+                                <p>Salir</p>
+                            </button>
+
+                            <button id="lanzador_accesibilidad" class="boton_accesibilidad" onclick="estado_accesibilidad(this.id)">
+                                <span class="ico-angle-left"></span>
+                                <span class="ico-child"></span>
+                            </button>
+                            <button class="boton_accesibilidad {{vm.clase_contraste}}" ng-click="vm.funcion_contraste()">
+                                <span class="{{vm.icono_contraste}}"></span>
+                            </button>
+                            <button class="boton_accesibilidad  {{vm.clase_idioma}}" ng-click="vm.funcion_idioma()">
+                                <span class="ico2-earth"></span>
+                            </button>
+                            <button class="boton_accesibilidad {{vm.tamano_letra}}" ng-click="vm.funcion_tamano()">
+                                <span class="ico2-font-size"></span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div style="position:absolute; left:0; display:flex;"
-                 ng-show="vm.$state.current.name != 'home' || (!vm.loggeado && vm.$state.current.name == 'busqueda')">
-                <img src="recursos/escudos-logos/planeacion.png" style="height:65px;margin-top:-5px;" />
-                <p style="font-family:'AbrilFatface-Regular'; color:white; font-size:40px; line-height:1.2;">Legem</p>
-            </div>
-            <div id="contenedor_accesibilidad" class="contenedor_accesibilidad">
 
-                <div class="deslizador">
-                    <button class="btn_deslizable" onclick="document.getElementById('body_index').scrollTop = '600';">
-                        <span class="ico-newspaper-o"></span>
-                        <p>Actualidad</p>
-                    </button>
-                    <button class="btn_deslizable" ui-sref="busqueda">
-                        <span class="ico-search"></span>
-                        <p>Busqueda</p>
-                    </button>
-
-                    <button class="btn_deslizable" ui-sref="home" onclick="document.getElementById('body_index').scrollTop = '0';">
-                        <span class="ico-home"></span>
-                        <p>Inicio</p>
-                    </button>
-
-                    <button class="btn_deslizable" ui-sref="login" ng-show="!vm.loggeado">
-                        <span class="ico-sign-in"></span>
-                        <p>Ingresar</p>
-                    </button>
-
-                    <button class="btn_deslizable" ng-click="vm.LogOut()" ng-show="vm.loggeado">
-                        <span class="ico-sign-in"></span>
-                        <p>Salir</p>
-                    </button>
-
-                    <button id="lanzador_accesibilidad" class="boton_accesibilidad" onclick="estado_accesibilidad(this.id)">
-                        <span class="ico-angle-left"></span>
-                        <span class="ico-child"></span>
-                    </button>
-                    <button class="boton_accesibilidad {{vm.clase_contraste}}" ng-click="vm.funcion_contraste()">
-                        <span class="{{vm.icono_contraste}}"></span>
-                    </button>
-                    <button class="boton_accesibilidad  {{vm.clase_idioma}}" ng-click="vm.funcion_idioma()">
-                        <span class="ico2-earth"></span>
-                    </button>
-                    <button class="boton_accesibilidad {{vm.tamano_letra}}" ng-click="vm.funcion_tamano()">
-                        <span class="ico2-font-size"></span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        
-        <div class="header2" ng-show="vm.loggeado">
-            <div class="navegacion">                
-                <ul class="bar_nav">                    
-
-                    <!--<li class="myFockingItem">
-                        <a ng-click="vm.LogOut()">Bienvenido: Admin</a>
-                    </li-->
-
-                    <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
-                        <a ui-sref="{{opcion.estado}}" >
-                            {{ opcion.texto }}
-                        </a>
-                        <ul ng-if="opcion.subEstados">
-                            <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
+                <div class="header2" ng-show="vm.loggeado">
+                    <div class="navegacion">
+                        <ul class="bar_nav">
+                            <li ng-repeat="opcion in vm.opcionesAMostrar" ng-click="opcion.click()">
+                                <a ui-sref="{{opcion.estado}}">
+                                    {{ opcion.texto }}
+                                </a>
+                                <ul ng-if="opcion.subEstados">
+                                    <li ng-repeat="subEstado in opcion.subEstados"><a ui-sref="{{subEstado.estado}}" ng-click="val=false; subEstado.click()">{{ subEstado.texto }}</a></li>
+                                </ul>
+                            <li>
                         </ul>
-                    <li>
-                </ul>
-            </div>
-        </div>
+                    </div>
+                </div>
 
-        <div ui-view class="animatio ng-enter"></div>
-    </div>   
-    
-    <wlegem-news ng-show="vm.$state.current.name == 'home'"></wlegem-news>
-    <wlegem-footer ng-show="vm.$state.current.name == 'home'"></wlegem-footer>
-    <wlegem-mini-footer ng-show="vm.$state.current.name != 'home' || (!vm.loggeado && vm.$state.current.name == 'busqueda')">
-    </wlegem-mini-footer>
+                <div ui-view class="animatio ng-enter"></div>
+            </div>
+        </section>
+        <section id="homero" >
+            <wlegem-news ng-show="vm.$state.current.name == 'home'"></wlegem-news>
+        </section>
+        <wlegem-footer ng-show="vm.$state.current.name == 'home'"></wlegem-footer>
+        <wlegem-mini-footer ng-show="vm.$state.current.name != 'home' || (!vm.loggeado && vm.$state.current.name == 'busqueda')">
+        </wlegem-mini-footer>
+    </div>
+   
+
+
 </body>
+
 </html>
