--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -143,7 +143,7 @@
     <script src="common/directives/footer/wlegem-footer.directive.js"></script>
     <script src="common/directives/noticias/wlegem-news.directive.js"></script>
     <script src="common/directives/mini-footer/wlegem-mini-footer.directive.js"></script>
-    <link href="css/normalize.css" rel="stylesheet" />
+    <!--<link href="css/normalize.css" rel="stylesheet" />-->
     <link href="css/animacion_carga.css" rel="stylesheet" />
 </head>
 
