--- a/WebLegemClient/src/common/directives/mini-footer/wlegem-mini-footer.directive.html
+++ b/WebLegemClient/src/common/directives/mini-footer/wlegem-mini-footer.directive.html
@@ -1,15 +1,15 @@
 ﻿<div class="a_mini_footer">
     <div class="sub_mini_footer1">
         <div>
-            <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png" style="height:80px;width:70px;" />
+            <img src="recursos/escudos-logos/Logo-Acreditacion-01_blanco.png" style="max-height:80px;max-width:70px;" />
         </div>
 
         <div>
-            <img src="recursos/escudos-logos/planeacion.png" style="height:80px;width:180px;" />
+            <img src="recursos/escudos-logos/planeacion.png" style="max-height:80px;max-width:180px;" />
         </div>
 
         <div>
-            <img src="recursos/escudos-logos/escudo_111_years.png" style="height:80px;width:80px;" />
+            <img src="recursos/escudos-logos/escudo_111_years.png" style="max-height:80px;max-width:80px;" />
         </div>
     </div>
     <div class="sub_mini_footer2">
