arreglados estilos listas

--- a/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
+++ b/WebLegemClient/src/common/directives/noticias/wlegem-news.directive.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="control_tarjeta">
                     <span><span class="ico-download"></span><a href="http://localhost:50555/api/Files/{{ documento.archivo }}">descargar</a></span>
-                    <span><span class="ico-eye"></span>ver</span>
+                    <span ng-click="vm.verDocumento( documento.archivo )"><span class="ico-eye"></span>ver</span>
                 </div>
             </div>
             <!--
