--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -35,6 +35,26 @@
     <script src="app/app.core.constants.js"></script>
     <script src="app/app.core.values.js"></script>
 
+    <!-- Components -->
+    <script src="common/components/wlegem-admin-crud/wlegem-admin-crud.controller.js"></script>
+    <script src="common/components/wlegem-admin-crud/wlegem-admin-crud.directive.js"></script>
+
+    <script src="common/components/wl-lista-tipo-doc/wl-lista-tipo-doc.controller.js"></script>
+    <script src="common/components/wl-lista-tipo-doc/wl-lista-tipo-doc.directive.js"></script>
+
+    <script src="common/components/wl-confirmacion/wl-confirmacion.controller.js"></script>
+    <script src="common/components/wl-confirmacion/wl-confirmacion.directive.js"></script>
+
+    <script src="common/components/wl-lista-entidades/wl-lista-entidades.controller.js"></script>
+    <script src="common/components/wl-lista-entidades/wl-lista-entidades.directive.js"></script>
+
+    <script src="common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.controller.js"></script>
+    <script src="common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.directive.js"></script>
+    
+    <script src="common/components/wl-lista-tipo-doc-hojitas/wl-lista-tipo-doc-hojitas.controller.js"></script>
+    <script src="common/components/wl-lista-tipo-doc-hojitas/wl-lista-tipo-doc-hojitas.directive.js"></script>
+
+
     <!-- Login -->
     <script src="app/login/login.js"></script>
     <script src="app/login/login.dependencies.js"></script>
@@ -83,6 +103,7 @@
     <script src="common/services/tipo-anotacion-resource.service.js"></script>
     <script src="common/services/documento-resource.service.js"></script>
 
+    
     <!--Estilos-->
     <link href="css/elementos/text_area.css" rel="stylesheet" />
     <link href="css/elementos/input_text.css" rel="stylesheet" />
