--- a/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
+++ b/WebLegemClient/src/common/directives/resultado-busqueda/wlegem-resultado-busqueda.directive.html
@@ -1,17 +1,16 @@
-﻿<div class="tarjeta_news" ng-repeat="documento in vm.arregloDocs">
+﻿<div class="tarjeta_news" ng-repeat="documento in vm.arregloDocs | orderBy: vm.predicate: vm.reverse">
 
-    <div class="titulo_tarjeta">
-        <!--{{ documento.tipoDocumento.nombre }} {{ documento.numero }} del {{ documento.fechaPublicacion | date: 'yyyy' }}-->
-        <a href="#">{{ documento.tipoDocumento }} {{ documento.numero }}</a>
+    <div class="titulo_tarjeta">        
+        <a href="#">{{ documento.tipoDocumento.nombre }} {{ documento.numero }} del {{ documento.fechaPublicacion | date: 'yyyy' }}</a>
     </div>
 
     <div class="contenido_tarjeta">
-        {{ documento.asunto }}
+        {{ documento.asunto | limitTo: 250: 200 }}
     </div>
 
     <div class="subcontenido_tarjeta">
-        <a>Entidad: <i>{{ documento.entidad }} </i> | </a>
-        <a>Fecha: <i>{{ documento.fecha }} </i> | </a>
+        <a>Entidad: <i>{{ documento.entidad.nombre }} </i> | </a>
+        <a>Fecha: <i>{{ documento.fechaPublicacion | date: 'dd/MM/yyyy' }} </i> | </a>
     </div>
 
     <div class="control_tarjeta">
