background login, creada view recuperar contraseña

--- a/WebLegemClient/src/index.html
+++ b/WebLegemClient/src/index.html
@@ -92,6 +92,7 @@
     <script src="app/usuarios/control-roles/control-roles.controller.js"></script>
     <script src="app/usuarios/control-usuarios/control-usuarios.controller.js"></script>
     <script src="app/usuarios/usuarios.controller.js"></script>
+    <script src="app/usuarios/recuperar-contrasena/recuperar-contrasena.controller.js"></script>
 
     <!-- Mocks -->
     <script src="common/mocks/common.mocks.dependencies.js"></script>
@@ -146,14 +147,11 @@
     <link href="iconografia/escudos-legem/style.css" rel="stylesheet" />
 
     <script src="app/homeController.js"></script>
-    <script src="app/uploader-andres.js"></script>
-    <script src="scripts/busqueda.js"></script>
+    <script src="app/uploader-andres.js"></script>    
 
     <link href="css/pagina_principal.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
     <link href="css/elementos/button.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-    <link href="css/estilos_weblegem.css" rel="stylesheet" ng-if="vm.val_contraste==0" />
-
-    <script src="app/busqueda/busqueda_controller.js"></script>
+    <link href="css/estilos_weblegem.css" rel="stylesheet" ng-if="vm.val_contraste==0" />    
 
     <!----Fuentes-Tipografia-->
     <link href="fuentes/CREAMPUF/fonts.css" rel="stylesheet" />
