--- a/WebLegemClient/src/common/directives/sort-busqueda/wlegem-sort-busqueda.directive.html
+++ b/WebLegemClient/src/common/directives/sort-busqueda/wlegem-sort-busqueda.directive.html
@@ -1,4 +1,4 @@
-﻿<ul class="bar_ordenamiento" ng-controller="WlegemSortBusquedaController as vms">
+﻿<ul class="bar_ordenamiento" ng-controller="WlegemSortBusquedaController as vm">
 
     <li>Ordenar por: </li>
     
